[package]
edition = '2021'
name = "chromecastise"
version = "1.0.9"
authors = ["Stuart Moss <samoss@gmail.com>"]
build = "build.rs"

[build-dependencies.clap]
version = "^4.0.0"
default-features = false
features = ["suggestions"]

[dependencies.clap]
version = "^4.0.0"
default-features = false
features = ["suggestions"]

[dependencies]
num_cpus = "1.15"
log = "*"
